Add core services and web interface for NVIDIA Voice Agent
- Implemented IAsrService for Automatic Speech Recognition using NVIDIA Parakeet-TDT-0.6B-V2 model.
- Created IAudioProcessor for audio format conversion, including WAV decoding and resampling.
- Developed ILlmService for language model interactions using TinyLlama-1.1B and Phi-3 Mini.
- Added ILogBroadcaster for broadcasting log messages to WebSocket clients.
- Introduced ITtsService for Text-to-Speech functionality using NVIDIA FastPitch and HiFiGAN models.
- Implemented LogBroadcaster class for managing WebSocket client connections and broadcasting logs.
- Created MelSpectrogramExtractor for extracting mel-spectrogram features from audio samples.
- Added appsettings.json for configuration and logging settings.
- Developed a responsive web interface in index.html for user interaction with the voice agent.

--- a/tests/NvidiaVoiceAgent.Tests/NvidiaVoiceAgent.Tests.csproj
+++ b/tests/NvidiaVoiceAgent.Tests/NvidiaVoiceAgent.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\NvidiaVoiceAgent\NvidiaVoiceAgent.csproj" />
+    <ProjectReference Include="..\..\NvidiaVoiceAgent\NvidiaVoiceAgent.csproj" />
   </ItemGroup>
 
 </Project>
