Enhance model download service with progress reporting and update model registry definitions

--- a/NvidiaVoiceAgent/appsettings.json
+++ b/NvidiaVoiceAgent/appsettings.json
@@ -9,7 +9,7 @@
   "ModelHub": {
     "AutoDownload": true,
     "UseInt8Quantization": true,
-    "ModelCachePath": "models",
+    "ModelCachePath": "model-cache",
     "HuggingFaceToken": null
   }
 }
