--- a/tests/NvidiaVoiceAgent.Core.Tests/NvidiaVoiceAgent.Core.Tests.csproj
+++ b/tests/NvidiaVoiceAgent.Core.Tests/NvidiaVoiceAgent.Core.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -10,7 +10,6 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
@@ -22,7 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\NvidiaVoiceAgent.Core\NvidiaVoiceAgent.Core.csproj" />
-    <ProjectReference Include="..\..\NvidiaVoiceAgent\NvidiaVoiceAgent.csproj" />
   </ItemGroup>
 
 </Project>
