Refactor code structure for improved readability and maintainability

--- a/tests/NvidiaVoiceAgent.Tests/NvidiaVoiceAgent.Tests.csproj
+++ b/tests/NvidiaVoiceAgent.Tests/NvidiaVoiceAgent.Tests.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\..\NvidiaVoiceAgent\NvidiaVoiceAgent.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\*.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
