chore: clean up empty code change sections in the changes log

--- a/NvidiaVoiceAgent.Core/NvidiaVoiceAgent.Core.csproj
+++ b/NvidiaVoiceAgent.Core/NvidiaVoiceAgent.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="NvidiaVoiceAgent.Core.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- ML/AI Model Inference -->
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.20.1" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Managed" Version="1.20.1" />
