--- a/tests/NvidiaVoiceAgent.Core.Tests/NvidiaVoiceAgent.Core.Tests.csproj
+++ b/tests/NvidiaVoiceAgent.Core.Tests/NvidiaVoiceAgent.Core.Tests.csproj
@@ -25,6 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="TestData\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
